--- a/index.html
+++ b/index.html
@@ -4,71 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홍길동의 포트폴리오</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #35424a;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px;
-        }
-        .project {
-            background: #f4f4f4;
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-    <header>
-        <h1>홍길동의 포트폴리오</h1>
-    </header>
+    <nav>
+        <div class="logo">홍길동</div>
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-    <div class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>안녕하세요, 저는 웹 개발자 홍길동입니다. 사용자 경험을 중시하는 웹 애플리케이션 개발에 관심이 많습니다.</p>
-        </section>
+    <section id="home">
+        <h1>안녕하세요, 저는 홍길동입니다</h1>
+        <p>웹 개발자 | UX 디자이너 | 문제 해결사</p>
+    </section>
 
-        <section id="skills">
-            <h2>Skills</h2>
-            <ul>
-                <li>HTML5, CSS3, JavaScript</li>
-                <li>React, Vue.js</li>
-                <li>Node.js, Express</li>
-                <li>Python, Django</li>
-            </ul>
-        </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>저는 사용자 중심의 웹 애플리케이션 개발에 열정을 가진 개발자입니다. 최신 기술 트렌드를 따라가며 지속적으로 학습하고 있습니다.</p>
+        <div class="skills">
+            <div class="skill">HTML5</div>
+            <div class="skill">CSS3</div>
+            <div class="skill">JavaScript</div>
+            <div class="skill">React</div>
+            <div class="skill">Node.js</div>
+        </div>
+    </section>
 
-        <section id="projects">
-            <h2>Projects</h2>
-            <div class="project">
+    <section id="projects">
+        <h2>My Projects</h2>
+        <div class="project-container">
+            <div class="project-card">
                 <h3>프로젝트 1</h3>
-                <p>이 프로젝트는 React를 사용하여 개발한 웹 애플리케이션입니다.</p>
+                <p>React를 이용한 SPA 개발</p>
             </div>
-            <div class="project">
+            <div class="project-card">
                 <h3>프로젝트 2</h3>
-                <p>이 프로젝트는 Django를 사용하여 개발한 웹 서비스입니다.</p>
+                <p>Node.js 백엔드 API 구축</p>
             </div>
-        </section>
+            <div class="project-card">
+                <h3>프로젝트 3</h3>
+                <p>반응형 웹사이트 디자인</p>
+            </div>
+        </div>
+    </section>
 
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Email: hong@example.com</p>
-            <p>GitHub: <a href="https://github.com/honggildong">github.com/honggildong</a></p>
-        </section>
-    </div>
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <form id="contact-form">
+            <input type="text" placeholder="이름" required>
+            <input type="email" placeholder="이메일" required>
+            <textarea placeholder="메시지" required></textarea>
+            <button type="submit">보내기</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 홍길동. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
