--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>홍길동의 포트폴리오</title>
+    <title>김경민의 포트폴리오</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
     <nav>
-        <div class="logo">홍길동</div>
+        <div class="logo">김경민</div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -19,7 +19,7 @@
     </nav>
 
     <section id="home">
-        <h1>안녕하세요, 저는 홍길동입니다</h1>
+        <h1>안녕하세요, 저는 김경민입니다</h1>
         <p>웹 개발자 | UX 디자이너 | 문제 해결사</p>
     </section>
 
@@ -56,15 +56,15 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <form id="contact-form">
-            <input type="text" placeholder="이름" required>
-            <input type="email" placeholder="이메일" required>
+            <input type="text" placeholder="김경민" required>
+            <input type="email" placeholder="kkmlouis@gmail.com" required>
             <textarea placeholder="메시지" required></textarea>
             <button type="submit">보내기</button>
         </form>
     </section>
 
     <footer>
-        <p>&copy; 2025 홍길동. All rights reserved.</p>
+        <p>&copy; 2025 김경민. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
