--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <form id="contact-form">
-            <input type="text" placeholder="김경민" required>
-            <input type="email" placeholder="kkmlouis@gmail.com" required>
+            <input type="text" placeholder="이름" required>
+            <input type="email" placeholder="이메일" required>
             <textarea placeholder="메시지" required></textarea>
             <button type="submit">보내기</button>
         </form>
